动态纹理，组发光，datasource 修改